# rust-wasm-vite

./: Cargo.toml  index.html  readme.md
.github/workflows/: deploy_web.yml
assets/: calculator_web_bg-1fd4ef82.wasm  calculator_web_bg-7e59b5aa.wasm  index-0ef765e8.js  index-48cb7afa.js  index-9220557f.css
calculator/: Cargo.toml
calculator/src/: lib.rs
calculator_cli/: Cargo.toml
calculator_cli/src/: main.rs
calculator_web/: Cargo.toml
calculator_web/src/: lib.rs
calculator_web/www/: package-lock.json  package.json  vite.config.ts
calculator_web/www/src/: App.tsx  index.css
